minor CSS changes, created new perks file to rewrite it's classes and css, changed title of dashboard file from Dashboard to Achievements

--- a/Dashboard/new_dashboard.html
+++ b/Dashboard/new_dashboard.html
@@ -4,7 +4,7 @@
     <head>
 
         <title>
-            Dashboard
+            Achievements
         </title>
 
         <meta charset="UTF-8" />
@@ -52,11 +52,13 @@
 
         <main class="flex main">
 
+            <!-- GOALS START -->
+
             <div class="main__container main__left-container">
                 <h1 class="heading--primary">
                     Goals
                 </h1>
-                <div class="flex flex-wrap goal">
+                <div class="flex flex-wrap br-5 goal">
                     <div class="flex vertical-center goal__info">
                         <div class="container">
                             <img src="badge.svg" class="badge-image goals__badge-image"></img>
@@ -73,7 +75,11 @@
                 </div>
             </div>
 
+            <!-- GOALS END -->
+
             <hr class="vertical-separator"/>
+
+            <!-- BADGES START -->
 
             <div class="main__container main__right-container">
                 <div class="container badge-container">
@@ -103,7 +109,11 @@
                 </div>
             </div>
 
+            <!-- BADGES END -->
+
         </div>
+
+        <!-- MAIN BODY ENDS -->
 
     </body>
 
