rewrote perk card css and html classes

--- a/Dashboard/new_perks.html
+++ b/Dashboard/new_perks.html
@@ -17,31 +17,31 @@
 
     <body>
 
-        <div class="perkCard">
-            <div class="perkSponsor">
-                <img src="sponsorLogo.svg" alt="" class="sponsorLogo" />
-                <div class="sponsorName">Macrohard</div>
-            </div>
-            <div class="perkImageContainer">
-                <img src="test_perk_img.jpg" class="perkImage" alt="Perk image">
-            </div>
-            <div class="perkDetails">
-                <div class="perkInfoContainer">
-                    <h3 class="perkTitle">
-                        Microsoft January Giveaway
-                    </h3>
-                    <div class="perkInfo">
-                        Claim free t-shirt from Microsoft
+        <div class="main">
+            <div class="br-5 perk-container">
+                <div class="flex vertical-center mb-10 ml-10 perk-sponsor">
+                    <img src="sponsorLogo.svg" alt="Sponsoro logo" class="sponsor-logo" />
+                    <div class="ml-5 sponsor-name">Macrohard</div>
+                </div>
+                <img src="test_perk_img.jpg" class="perk-image" alt="Perk image">
+                <div class="perk-details">
+                    <div class="mb-5 container">
+                        <h3 class="mb-3 heading--secondary">
+                            Microsoft January Giveaway
+                        </h3>
+                        <div class="normal-text">
+                            Claim free t-shirt from Microsoft
+                        </div>
+                    </div>
+                    <div class="mb-5 mt-20 container">
+                        <h3 class="mb-3 heading--secondary">Criteria to claim the perk</h3>
+                        <div class="normal-text">
+                            You need to have achieved the Rockstar Ultra Pro Max badge.
+                        </div>
                     </div>
                 </div>
-                <div class="perkCriteria">
-                    <h3 class="perkTitle">Criteria to claim the perk</h3>
-                    <div class="perkInfo">
-                        You need to have achieved the Rockstar Ultra Pro Max badge.
-                    </div>
-                </div>
+                <button class="mb-15 btn">Claim Now</button>
             </div>
-            <button class="claimButton">Claim Now</button>
         </div>
 
     </body>
