made user profile page, perk details page and badge card. Many changes to new_styles css file

--- a/Dashboard/new_dashboard.html
+++ b/Dashboard/new_dashboard.html
@@ -18,7 +18,7 @@
 
         <!-- HEADER STARTS -->
         
-        <header class="flex vertical-center header">
+        <header class="flex vertical-center bg-white header">
             <div class="container">
                 <div class="logo-container">
                     <img src="default-monochrome.svg" class="logo" />
@@ -55,7 +55,7 @@
             <!-- GOALS START -->
 
             <div class="main__container main__left-container">
-                <h1 class="heading--primary">
+                <h1 class="heading--primary mb-10">
                     Goals
                 </h1>
                 <div class="flex flex-wrap br-5 goal">
@@ -77,13 +77,13 @@
 
             <!-- GOALS END -->
 
-            <hr class="vertical-separator"/>
+            <hr class="vertical-separator main__vertical-separator"/>
 
             <!-- BADGES START -->
 
             <div class="main__container main__right-container">
                 <div class="container badge-container">
-                    <h1 class="heading--primary">
+                    <h1 class="heading--primary mb-10">
                         Badges
                     </h1>
                     <div class="flex flex-wrap vertical-center mt-10 container">
