--- a/Dashboard/new_perks.html
+++ b/Dashboard/new_perks.html
@@ -18,13 +18,13 @@
     <body>
 
         <div class="main">
-            <div class="br-5 perk-container">
+            <div class="br-5 bg-white card-container perk-container">
                 <div class="flex vertical-center mb-10 ml-10 perk-sponsor">
                     <img src="sponsorLogo.svg" alt="Sponsoro logo" class="sponsor-logo" />
                     <div class="ml-5 sponsor-name">Macrohard</div>
                 </div>
                 <img src="test_perk_img.jpg" class="perk-image" alt="Perk image">
-                <div class="perk-details">
+                <div class="card-details">
                     <div class="mb-5 container">
                         <h3 class="mb-3 heading--secondary">
                             Microsoft January Giveaway
